--- a/src/Template/cup/sidebar.twig
+++ b/src/Template/cup/sidebar.twig
@@ -29,7 +29,7 @@
         <div class="tab-content mt-3">
 
             {# TAB: Tasks #}
-            <div class="tab-chat tab-pane fade {{ parameter('notification_is_enabled', 'yes') == 'no' ? 'show active' : '' }}" id="task">
+            <div class="tab-chat tab-pane fade show active" id="task">
                 <div class="quick-wrapper">
                     <div class="quick-scroll scrollbar-outer">
                         <div class="quick-content">
