fix soc networks list

--- a/src/Template/cup/reference/social-networks/form.twig
+++ b/src/Template/cup/reference/social-networks/form.twig
@@ -34,7 +34,7 @@
 
                                 <datalist id="social-networks">
                                     {% set networks = [
-                                        'Facebook','Instagram','Threads','VK',
+                                        'Facebook','Instagram','Threads',
                                         'Telegram','Pinterest','Snapchat','Reddit',
                                         'WhatsApp','TikTok','YouTube','Twitter','LinkedIn'
                                     ] %}
