--- a/src/Template/cup/file/index.twig
+++ b/src/Template/cup/file/index.twig
@@ -48,7 +48,7 @@
                                             <i class="fas fa-external-link-alt"></i>
                                         </a>
                                     </div>
-                                    <div class="col-3 col-sm-2">{{ item.size }}</div>
+                                    <div class="col-3 col-sm-2">{{ item.size() }}</div>
                                     <div class="col-sm-2 d-none d-sm-block">{{ item.date|df }}</div>
                                     <div class="col-3 col-sm-2 text-right">
                                         <form action="/cup/file/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the file?'|locale }}');">
