--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -39,7 +39,7 @@
                                         'label': 'Address'|locale,
                                         'type': 'text',
                                         'name': 'address',
-                                        'prefix': base_url() ~ '/' ~ item.category.address ~ '/',
+                                        'prefix': base_url() ~ '/',
                                         'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Link to view the article. You can leave it blank, then the value will be generated automatically. Only Latin characters and numbers without spaces are allowed'|locale) ~ '"></i>',
                                         'args': {
                                             'value': item.address,
